demos/multi-cluster/app-repo/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whereami
  labels:
    shared-gateway-access: "true"
