demos/multi-cluster/app-repo/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whereami-service
  namespace: whereami
spec:
  selector:
    app: whereami
  ports:
    - name: http
      port: 80
      targetPort: 8080
