demos/multi-cluster/app-repo/k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: whereami-route
  namespace: whereami
spec:
  hostnames:
  - whereami.endpoints.gateway-demos.cloud.goog
  parentRefs:
  - name: external-http
    namespace: gateway
  rules:
  - backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: whereami-service
      port: 80
